--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.8.0"
 dynamic = ["version"]
 
 license = {text = "BSD-3-Clause"}
+dependencies = ["numpy", "pandas"]
 
 [build-system]
 requires = [
