--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,5 +13,10 @@ dependencies = ["numpy", "pandas"]
 requires = [
     "setuptools>=45",
     "wheel",
+    "setuptools_scm[toml]>=6.2",
+
+
 ]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools_scm]
