add flake8 and optional deps

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,3 +20,10 @@ requires = [
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools_scm]
+
+[project.optional-dependencies]
+dev = [
+    "pytest",
+     "setuptools_scm",
+    "flake8"
+]
