--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -1,4 +1,5 @@
 name: tests
+
 on:
   push:
     branches:
@@ -6,6 +7,7 @@ on:
     tags:
       - '*'
   pull_request:
+
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -21,13 +23,24 @@ jobs:
           pip install .[dev]
       - name: Lint
         run: pre-commit run --all-files
+
   test:
     needs: lint
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ ubuntu-latest, macos-latest, windows-latest ]
-        python-version: [ "3.8","3.9","3.10" ]
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        python-version: ["3.8","3.9","3.10"]
+        exclude:
+          - os: macos-latest
+            python-version: 3.8
+          - os: macos-latest
+            python-version: 3.9
+          - os: windows-latest
+            python-version: 3.8
+          - os: windows-latest
+            python-version: 3.9
+
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python
@@ -40,6 +53,7 @@ jobs:
           pip install .[dev]
       - name: Test
         run: pytest
+
   deploy:
     needs: test
     runs-on: ubuntu-latest
